--- a/index.html
+++ b/index.html
@@ -128,15 +128,15 @@
       <form action="https://formsubmit.co/sori2456@gmail.com" method="POST">
         <h2>發送訊息</h2>
         <div class="inputBox">
-          <input type="text" id="name" name="" required="required">
+          <input type="text" id="name" name="name" required="required">
           <span class="span">姓名</span>
         </div>
         <div class="inputBox">
-          <input type="email" id="email" name="" required="required">
+          <input type="email" id="email" name="email" required="required">
           <span class="span">Email</span>
         </div>
         <div class="inputBox">
-          <input type="text" id="phone" name="" required="required">
+          <input type="text" id="phone" name="phone" required="required">
           <span class="span">電話號碼</span>
         </div>
         <div class="inputBox">
@@ -144,7 +144,7 @@
           <span>輸入您的訊息. . .</span>
         </div>
         <div class="inputBox">
-          <input type="submit" name="" value="發送">
+          <input type="submit" name="submit" value="發送">
         </div>
       </form>
     </div>
