--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
           <span class="span">電話號碼</span>
         </div>
         <div class="inputBox">
-          <textarea required="required"></textarea>
+          <textarea name="message" required="required"></textarea>
           <span>輸入您的訊息. . .</span>
         </div>
         <div class="inputBox">
-          <input type="submit" name="submit" value="發送">
+          <input type="submit" name="" value="發送">
         </div>
       </form>
     </div>
