--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       </div> 
     </div>
     <div class="contactForm">
-      <form action="https://formsubmit.co/sori2456@gmail.com" method="POST">
+      <form action="https://formsubmit.co/55bfe9c39b25b70191de427aa377e24b" method="POST">
         <h2>發送訊息</h2>
         <div class="inputBox">
           <input type="text" id="name" name="name" required="required">
@@ -140,11 +140,11 @@
           <span class="span">電話號碼</span>
         </div>
         <div class="inputBox">
-          <textarea name="message" required="required"></textarea>
+          <textarea input type="text" id="message" name="message" required="required"></textarea>
           <span>輸入您的訊息. . .</span>
         </div>
         <div class="inputBox">
-          <input type="submit" name="" value="發送">
+          <input type="submit" value="發送">
         </div>
       </form>
     </div>
