--- a/google183bf2e0f9bbf12a.html
+++ b/google183bf2e0f9bbf12a.html
@@ -1,1 +1,2 @@
-google-site-verification: google183bf2e0f9bbf12a.html
+<meta name="google-site-verification"
+      content="google183bf2e0f9bbf12a.html"/>
