--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh">
   <head>
-    <meta name="google-site-verification" content="google183bf2e0f9bbf12a.html" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>東榮會計服務公司</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com">google-site-verification: google183bf2e0f9bbf12a.html
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <meta name="google-site-verification" content="google183bf2e0f9bbf12a.html" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/ab3f678e30.js" crossorigin="anonymous"></script>
