--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <div class="course-col">
       <h3>實力<br><i class="fa-solid fa-hand-fist"></i><br></h3>
       <p1>曾在多間知名的會計公司工作過<br>
-        擁有不少專業知識，
+        擁有不少專業知識，<br>
         望能助大家一臂之力</p1>
     </div>
 
