--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
     <div class="course-col">
       <h3>價錢<br><i class="fa-solid fa-hand-holding-dollar"></i></br></h3>
       <p1>彈性的價錢制度<br>
-        可以商議價錢，
-        雙方滿意便可完成交易</p1>
+          可以商議價錢，
+          雙方滿意便可完成交易</p1>
     </div>
     <div class="course-col">
       <h3>實力<br><i class="fa-solid fa-hand-fist"></i><br></h3>
       <p1>曾在多間知名的會計公司工作過<br>
-        擁有不少專業知識<br>
-        望能助大家一臂之力</p1>
+          擁有不少專業知識，
+          望能助大家一臂之力</p1>
     </div>
 
   </div>
