--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="text-box">
         <h1 class="slideleft">富有經驗的會計服務</h1>
         <p class="slideleft">您是否被稅務問題所困擾?<br>我可以幫助您!</br></p>
-        <a href="https://chunhin3w3.github.io/tungwing-website/#contact" class="hero-btn slideleft">聯絡我們以了解更多信息</a>
+        <a href="https://tungwing-acct.ml/index.html#contact" class="hero-btn slideleft">聯絡我們以了解更多信息</a>
       </div>
 
 <!----------JavaScript for Toggle Menu------>
