--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
     <div class="course-col">
       <h3>實力<br><i class="fa-solid fa-hand-fist"></i><br></h3>
-      <p1>擁有多年會計報稅工作經驗和專業知識<br>可幫助客戶解決稅務疑難和實際問題</p1>
+      <p1>擁有多年會計報稅工作經驗和專業知識<br>可幫助客戶解決稅務疑難和實際問題<br></p1>
     </div>
 
   </div>
